# rokey6_b3_motion

./: MOVEJ_TEST.drl  PNP_move.drl  README.md  SOL_TEST.drl  UI_guide.md  check_current  check_slot_spiral.py  ex0120  final_check_current  final_insert_card_slot  insert_card_slot.py  insert_check_slot  insert_check_slot_ex  motion0122  move1.py  move_check_slot.drl  move_current.drl  movej_0120.py  moving0119.py  moving0120fix.drl  moving1.drl  moving1_error.drl  moving_check_slot.py  moving_grip.drl  movingj.drl  no2_prototype_motion_v1.drl  package.xml  pro_hit_v3_re  project_hit_guideline.md  project_hit_v2  project_hit_v2_real  ros2_check_slot_spiral.py  setup.cfg  setup.py  slide_gripper.drl  task_fix_move_z(simple)  task_node1.py  ui_node.py
ddr5_tactile_handler/: package.xml  setup.cfg  setup.py
ddr5_tactile_handler/config/: ddr5_params.yaml
ddr5_tactile_handler/ddr5_tactile_handler/: __init__.py  main_state_machine.py  motion_control.py  tactile_sensor.py
ddr5_tactile_handler/launch/: ddr5_handler.launch.py
frontend/: index.html
frontend/css/: dashboard.css
frontend/js/: dashboard.js  firebase-config.js  firebase-rest.js
project_hit/: .gitignore  CLEANUP_REPORT.md  README.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  UI_guide.md  gripper_service_node.py  no1_ros2_check_slot.txt  no3_ref_tactile_sorting.drl  package.xml  project_hit_overview.md  robot_interface_node.py  rokey-b-3-firebase-adminsdk-fbsvc-09612845da.json  setup.cfg  setup.py
project_hit/config/: firebase_config.json
project_hit_interfaces/: CMakeLists.txt  package.xml
(+20 files in other folders)
